Integer.valueOf(int) alows caching of the Integer object insteadto new Integer(int)